[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/character.png" type="Texture" id=1]
[ext_resource path="res://entities/player/player.gd" type="Script" id=2]
[ext_resource path="res://resources/player_food.tres" type="Resource" id=3]
[ext_resource path="res://resources/player_health.tres" type="Resource" id=4]
[ext_resource path="res://resources/player_inventory.tres" type="Resource" id=5]
[ext_resource path="res://resources/player_temperature.tres" type="Resource" id=6]

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 1 )
region = Rect2( 24, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 1 )
region = Rect2( 48, 0, 24, 24 )

[sub_resource type="AtlasTexture" id=9]
atlas = ExtResource( 1 )
region = Rect2( 24, 24, 24, 24 )

[sub_resource type="AtlasTexture" id=8]
atlas = ExtResource( 1 )
region = Rect2( 0, 24, 24, 24 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ) ],
"loop": true,
"name": "idle",
"speed": 5.0
}, {
"frames": [ SubResource( 9 ), SubResource( 8 ) ],
"loop": true,
"name": "walk",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=1]
radius = 2.0

[node name="Player" type="Node2D"]
script = ExtResource( 2 )
speed = 2.0
health = ExtResource( 4 )
food = ExtResource( 3 )
inventory = ExtResource( 5 )
temperature = ExtResource( 6 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, -10 )
frames = SubResource( 7 )
animation = "idle"
frame = 2
playing = true

[node name="EventDetector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="EventDetector"]
shape = SubResource( 1 )

[node name="CollisionRay" type="RayCast2D" parent="."]

[node name="Tween" type="Tween" parent="."]

[node name="TickTimer" type="Timer" parent="."]
autostart = true

[connection signal="moved" from="." to="." method="_on_Player_moved"]
[connection signal="body_entered" from="EventDetector" to="." method="_on_EventDetector_body_entered"]
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="TickTimer" to="." method="_on_TickTimer_timeout"]
